Tue Jun  4 18:36:05 EEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* Fixed detach timeout handling to use Client ID and not
	  the actual client entry which may be freed in the callback.
	  Affected file silcd/command.c.

Thu May 30 15:53:45 CEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* Merged c0ffee's multiple interface support patch.
	  Affected files in silcd/.

Wed May 29 18:08:15 EEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* Cleanup keys properly.  Affected file is
	  irssi/src/silc/core/clientutil.c.

Tue May 28 20:11:41 EEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* Display the user mode on the status bar.  Affected file
	  irssi/src/silc/core/silc-expandos.c.

Tue May 28 13:56:26 CEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* If private message key is not set, but the flag is set in
	  the packet, ignore the packet since it cannot be decrypted.
	  Affected file lib/silcclient/client_prvmsg.c.

Thu May 23 12:00:14 CEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* When resuming client, remove the old client entry from
	  the watcher list too.  Affected file silcd/packet_receive.c.

	* Do not allow normal server to force founder mode away
	  from router if the founder mode is already set.  Affected
	  file silcd/packet_receive.c.

	* Remove the client entry with watch notify types with short
	  timeout, and not directly, so that other notifys can be
	  retrieved too.  Affected file lib/silcclient/client_notify.c.

	* Display notification about data messages that cannot be
	  displayed.  Affected files irssi/src/silc/core/client_ops.c,
	  irssi/src/fe-common/silc/module-formats.[ch].

Sun May 19 18:59:00 EEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* Fixed the CHANNEL_CHANGE notify handling in client libary
	  to not use freed memory.  Affected file is
	  lib/silcclient/client_notify.c.

	* Fixed CUMODE_CHANGE notify handling in server.  Affected
	  file silcd/packet_receive.c.
