@@ -1,3 +1,9 @@
+Sun Jun  9 18:58:25 EEST 2002 Pekka Riikonen <priikone@silcnet.org>
+
+	* The length arguments in bind() and connect() were wrong
+	  and fixed now to used SIZEOF_SOCKADDR in the
+	  lib/silcutil/unix/silcunixutil.c.
+
 Tue Jun  4 18:36:05 EEST 2002 Pekka Riikonen <priikone@silcnet.org>
 
 	* Fixed detach timeout handling to use Client ID and not
